objects/Holding__c.object
<CustomObject>
    <fields>
        <fullName>Collateral__c</fullName>
        <label>Collateral</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Holdings</relationshipLabel>
        <relationshipName>Holdings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_Shares__c</fullName>
        <label>Number of Shares</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Price__c</fullName>
        <label>Stock Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ticker_Symbol__c</fullName>
        <label>Ticker Symbol</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Lendable_Value__c</fullName>
        <formula>(Number_of_Shares__c *  Stock_Price__c) / 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Lendable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <formula>Number_of_Shares__c *  Stock_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yahoo_Finance_Link__c</fullName>
        <label>Yahoo Finance Link</label>
        <type>Url</type>
    </fields>
    <label>Holding</label>
    <nameField>
        <displayFormat>H-{00000000}</displayFormat>
        <label>Holding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holdings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>